# quant-fund-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  PHASE2_RESULTS.md  PHASE3_RESULTS.md  PHASE4_RESULTS.md  README.md  README.old.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.venv_mvp/: pyvenv.cfg
configs/: data.yaml  live_trading.yaml  train.yaml  universe.yaml
deploy/: DEPLOYMENT.md  QUICKSTART.md  README.md  aws_ec2_setup.sh  setup_cron.sh
docs/: PAPER_TRADING_SETUP.md  VOLATILITY_OPTIONS_STRATEGY.md
reports/: bt_perf_1d.parquet  bt_perf_1d_2010-01-01_2024-12-31.parquet  bt_perf_1d_2019-01-01_2024-12-31.parquet  bt_perf_1d_2020-01-01_2024-12-31.parquet  bt_perf_1d_2020-02-27_2020-03-15.parquet  bt_perf_1d_2023-01-01_2024-12-31.parquet  bt_perf_5d_2010-01-01_2024-12-31.parquet  bt_perf_60m.parquet  bt_perf_60m_2023-01-01_2025-09-27.parquet  bt_perf_60m_2024-01-01_2024-12-31.parquet  bt_timeseries_1d.parquet  bt_timeseries_1d_2010-01-01_2024-12-31.parquet  bt_timeseries_1d_2019-01-01_2024-12-31.parquet  bt_timeseries_1d_2020-01-01_2024-12-31.parquet  bt_timeseries_1d_2020-02-27_2020-03-15.parquet  bt_timeseries_1d_2023-01-01_2024-12-31.parquet  bt_timeseries_5d_2010-01-01_2024-12-31.parquet  bt_timeseries_60m.parquet  bt_timeseries_60m_2024-01-01_2024-12-31.parquet  bt_timeseries_60m_2024-01-01_2025-09-27.parquet  bt_trades_1d.parquet  bt_trades_1d_2010-01-01_2024-12-31.parquet  bt_trades_1d_2019-01-01_2024-12-31.parquet  bt_trades_60m.parquet  (+7 more)
(+1540 files in other folders)
